<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="Settings"
        android:title="Settings"
        >
        <CheckBoxPreference
            android:key="@string/pref_key_boot"
            android:title="Launch on Boot"
            android:summary="Start the App when the device boots"
            android:defaultValue="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:summary="Navigation"
        android:title="Device Control">
    <Preference android:title="Close"
                android:key="@string/pref_key_close"/>
        <Preference android:title="Home"
            android:key="@string/pref_key_quit"
            />
        <Preference
            android:title="Launcher"
            android:summary="Select default Launcher"
            android:key="@string/pref_key_launcher"
            />
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="Security"
        android:title="Security">
        <EditTextPreference android:title="App Pin"
            android:key="@string/pref_key_pin"
            android:defaultValue="2244"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="4"
            />
        />
    </PreferenceCategory>
</PreferenceScreen>
